Refactor/misc improvements (#30)
* fix: puzzle reward item adds item directly to player inventory

* refactor: drop command checks if an item is equipped and provides helpful message
refactor: inspect command shows details of currently equipped items (no need to unequip)

* refactor: use command delegates to heal method if item is health potion, heal uses any health potion in inventory without needing item name typed.

* feat: add map command to display player current room and update player docs

* test: add unit tests for Puzzle, DefaultInteractionService, and DefaultMapService

* test: add unit tests for Player and controllers

* test: add unit test for FrontController

* refactor(JsonWorldLoader): validate start room exists, improve error messages/exceptions, extracted number values into constants, code cleanup

* test: add unit tests for CommandToken, GameContext, and World

* docs: update readme with links, updated system srchitecture, and gameplay screenshots

* feat: add cli support for loading different worldpacks in client

* test: add unit tests to aid debugging runtime crashes related to loading worldpack data

* fix: modify gradle config and add custom run script to avoid gradle JVM OOM crash on loading worldpacks through console args